// 描述: 代理服务器RPC
// 使用: 服务器,客户端
syntax = "proto3";
package rpc;
import "base.proto";

// 8000 ~ 10000
enum ProxyRPC {
    PROXY_RPC_NONE = 0;
    REQ_HEARTBEAT = 8001; // 心跳包
    ACK_HEARTBEAT = 8002; // 代理服务器响应

    REQ_CONNECT_PROXY = 8003;
    ACK_CONNECT_PROXY = 8004;
    REQ_DISCONNECT_PROXY = 8005;
    ACK_DISCONNECT_PROXY = 8006;

    NC_ACK_KICK_OFF = 8010; // 被踢下线
}

message ReqConnectProxy { // msg_id=8003; desc=Request to connect the proxy;
    string account_id = 1;
    string key = 2;
    int32 login_node = 3;
    uint64 signatrue = 4;
}

message AckConnectProxy { // msg_id=8004; desc=Request to connect the proxy response;
    int32 code = 1;
}

message ReqDisconnectProxy {}
message AckDisconnectProxy { int32 code = 1; }

message ReqHeartBeat { int32 index = 1; }

message AckHeartBeat { int32 index = 1; }

message AckKickOff { int64 time = 1; }